--- a/app/logged_out.html
+++ b/app/logged_out.html
@@ -1,5 +1,5 @@
 <body>
  <h2> You are logged out</h2>
- <a href="https://ap-south-1y36019795.auth.ap-south-1.amazoncognito.com/login?client_id=16evn7ec0mirhlhms2ciul61nb&response_type=code&scope=email+openid+phone&redirect_uri=https%3A%2F%2Fweb-app-bucket123.s3.ap-south-1.amazonaws.com%2Flogged_in.html"> Log back in</a>
+ <a href="https://ap-south-1h8jv8zfxt.auth.ap-south-1.amazoncognito.com/login?client_id=77cmh3r79p51f274i5qrb5pp3m&response_type=code&scope=email+openid+phone&redirect_uri=https%3A%2F%2Fmy-public-bucket-unique-name456.s3.ap-south-1.amazonaws.com%2Flogged_in.html"> Log back in</a>
  </body>
 </body>
