--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
 <body>
-    <h3> Welcome to the site !!! from AWS </h3>
+    <h3> Welcome to the site !!! from Azure </h3>
     <p><a href="https://ap-south-1h8jv8zfxt.auth.ap-south-1.amazoncognito.com/login?client_id=77cmh3r79p51f274i5qrb5pp3m&response_type=code&scope=email+openid+phone&redirect_uri=https%3A%2F%2Fmy-public-bucket-unique-name456.s3.ap-south-1.amazonaws.com%2Flogged_in.html">  Register or login</a></p>
 </body>
