--- a/app/logged_out.html
+++ b/app/logged_out.html
@@ -1,5 +1,5 @@
 <body>
  <h2> You are logged out</h2>
- <a href="https://ap-south-1h8jv8zfxt.auth.ap-south-1.amazoncognito.com/login?client_id=77cmh3r79p51f274i5qrb5pp3m&response_type=code&scope=email+openid+phone&redirect_uri=https%3A%2F%2Fmy-public-bucket-unique-name456.s3.ap-south-1.amazonaws.com%2Flogged_in.html"> Log back in</a>
+ <a href="https://my-unique-auth-domain-123.auth.ap-south-1.amazoncognito.com/login?client_id=1qire24c98blbhn02q6kqunr89&response_type=code&scope=email+openid+profile&redirect_uri=https%3A%2F%2Fmy-public-bucket-unique-name456.s3.ap-south-1.amazonaws.com%2Flogged_in.html"> Log back in</a>
  </body>
 </body>
